[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
homepage = "https://world.org/world-chain"
repository = "https://github.com/worldcoin/world-chain/"

[workspace]
resolver = "2"
members = [
    "crates/tests",
    "crates/toolkit",
    "crates/world/bin",
    "crates/world/node",
    "crates/world/payload",
    "crates/world/rpc",
    "crates/world/pbh",
    "crates/world/pool", 
    "crates/world/test-utils",
]

default-members = ["crates/world/bin"]

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[workspace.lints]

[workspace.dependencies]
# internal
world-chain-builder-node = { path = "crates/world/node" }
world-chain-builder-pbh = { path = "crates/world/pbh" }
world-chain-builder-payload = { path = "crates/world/payload" }
world-chain-builder-rpc = { path = "crates/world/rpc" }
world-chain-builder-pool = { path = "crates/world/pool" }
world-chain-builder-test-utils = { path = "crates/world/test-utils" }

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "test-utils",
] }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }

# reth-optimism
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "optimism",
] }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "optimism",
] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "optimism",
] }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "optimism",
] }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", features = [
    "optimism",
] }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth_payload_util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }

# alloy op
op-alloy-consensus = "0.10.3"
op-alloy-rpc-types = "0.10.3"
op-alloy-rpc-types-engine = "0.10.3"
op-alloy-network = "0.10.3"

# alloy
alloy-provider = { version = "0.11.1", default-features = false }
alloy-transport = { version = "0.11.1", default-features = false }
alloy-consensus = { version = "0.11.1", default-features = false }
alloy-network = { version = "0.11.1", default-features = false }
alloy-primitives = { version = "0.8.20", default-features = false }
alloy-rpc-types-eth = { version = "0.11.1", default-features = false }
alloy-rpc-types = { version = "0.11.1", features = [
    "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "0.11.1" }
alloy-rlp = "0.3.10"
alloy-eips = { version = "0.11.1", default-features = false }
alloy-genesis = { version = "0.11.1", default-features = false }
alloy-rpc-types-debug = "0.11.1"
alloy-signer = { version = "0.11.1", default-features = false }
alloy-signer-local = { version = "0.11.1", default-features = false }
alloy-sol-types = "0.8.18"

# revm
revm = { version = "19.3.0", features = ["std"], default-features = false }
revm-primitives = { version = "15.1.0", default-features = false }

# rpc
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
jsonrpsee-types = "0.24"

# 3rd party
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
bytemuck = "1"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f899add7116ccc1228f5e5e5ee2e2e233768", features = [
    "depth_30",
] }
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
parking_lot = "0.12"
derive_more = { version = "1", default-features = false, features = ["full"] }
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6.0" }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false }
bon = "3.3.0"
rayon = "1.10.0"
