[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
world-chain-cli.workspace = true
world-chain-node.workspace = true
world-chain-pool.workspace = true
world-chain-primitives.workspace = true
world-chain-test-utils.workspace = true
world-chain-pbh.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true

# reth
reth.workspace = true
reth-e2e-test-utils.workspace = true
reth-node-api.workspace = true
reth-optimism-node = { workspace = true, features = ["test-utils"] }
reth-optimism-payload-builder.workspace = true
reth-rpc-layer.workspace = true

# 3rd party
ed25519-dalek.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
futures.workspace = true
hex.workspace = true
once_cell.workspace = true
rand.workspace = true
reqwest.workspace = true
semaphore-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
