[package]
name = "world-chain-acceptance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# World Chain
world-chain-acceptance-macros.workspace = true
world-chain-manifest.workspace = true

# alloy
alloy-eips.workspace = true
alloy-provider.workspace = true
alloy-rpc-client = { workspace = true, features = ["reqwest"] }
alloy-rpc-types-eth.workspace = true
alloy-transport.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest"] }

# misc
chrono = { workspace = true, features = ["clock"] }
eyre.workspace = true
inventory.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
