[package]
name = "world-chain-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# internal 
world-chain-primitives.workspace = true
world-chain-pool.workspace = true
world-chain-chainspec.workspace = true
world-chain-evm.workspace = true
world-chain-state.workspace = true

# reth
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true

# op-reth
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-signer-local.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
alloy-op-evm.workspace = true
alloy-rpc-types-engine.workspace = true

# revm
revm.workspace = true
revm-database.workspace = true

# op-revm
op-revm.workspace = true

semaphore-rs.workspace = true

# misc
crossbeam-channel.workspace = true
tracing.workspace = true
eyre.workspace = true
either.workspace = true
metrics.workspace = true
metrics-derive.workspace = true

[dev-dependencies]
world-chain-test-utils.workspace = true
world-chain-builder.workspace = true
world-chain-node.workspace = true
reth-optimism-node = { workspace = true, features = ["test-utils"] }
reth-tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
reth-tracing.workspace = true
criterion.workspace = true
tokio.workspace = true
alloy-rlp.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-node-core.workspace = true

[[bench]]
name = "flashblock_validation_synthetic"
harness = false

[[bench]]
name = "flashblock_validation_live_node"
harness = false

[[bench]]
name = "flashblock_building_live_node"
harness = false

[[bench]]
name = "flashblock_validation_mainnet"
harness = false
