[package]
name = "world-chain-kona"
description = "Kona OP Stack consensus node integration for World Chain — in-process Engine API transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# World-chain
world-chain-cli.workspace = true

# Kona crates — canonical ethereum-optimism
kona-node-service.workspace = true
kona-genesis.workspace = true
kona-rpc.workspace = true

# Alloy - shared Ethereum types
alloy-rpc-types-engine.workspace = true

# General
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
eyre.workspace = true
url.workspace = true

[features]
default = []
