[package]
name = "world-chain-kona"
description = "Kona OP Stack consensus node integration for World Chain — in-process Engine API transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# World-chain
world-chain-cli.workspace = true
world-chain-primitives.workspace = true

# Kona crates — canonical ethereum-optimism
kona-node-service.workspace = true
kona-engine.workspace = true
kona-derive.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true
kona-registry.workspace = true
kona-rpc.workspace = true

# Reth (in-process engine handle, payload store, optimism payload types)
reth-engine-primitives.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-optimism-node.workspace = true

# Alloy - shared Ethereum types
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["ipc"] }
alloy-rpc-client = { workspace = true, features = ["ipc"] }
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true

# Alloy - OP
op-alloy-network.workspace = true
op-alloy-provider.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true

# General
ed25519-dalek.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
eyre.workspace = true
url.workspace = true

[features]
default = []
