[package]
name = "world-chain-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
world-chain-pool.workspace = true
world-chain-p2p.workspace = true
world-chain-primitives.workspace = true
world-chain-rpc.workspace = true
world-chain-builder.workspace = true
world-chain-validator.workspace = true
world-chain-cli.workspace = true
world-chain-payload.workspace = true
world-chain-chainspec.workspace = true
world-chain-evm.workspace = true
world-chain-exex.workspace = true
world-chain-op-batcher.workspace = true

reth-node-builder.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-node.workspace = true
reth-optimism-forks.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-node-api.workspace = true
reth-network.workspace = true
reth-network-peers.workspace = true
reth-eth-wire-types.workspace = true
reth-rpc-engine-api.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-api.workspace = true
reth-rpc-server-types.workspace = true
reth-node-core.workspace = true
reth-primitives-traits.workspace = true
reth-codecs.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true

[build-dependencies]
vergen.workspace = true
vergen-git2.workspace = true

[dev-dependencies]
world-chain-test-utils.workspace = true
reth-eth-wire.workspace = true
reth-provider.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-db.workspace = true
